Project

General

Profile

Actions

Bug #16590

closed

rgw: handle Swift auth errors in a way compatible with new Tempests

Added by Radoslaw Zarzynski almost 8 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

We have to differentiate the error codes depending on whether user is anonymous (401 Unauthorized) or he doesn't have necessary permissions (403 Forbidden). The reason behind that is the change in Tempest. See commit ID in Tempest: 6b1cd29b763dbc556137c89c5fed54c624da7f69.

Actions #1

Updated by Radoslaw Zarzynski almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Daniel Gryniewicz about 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF