rgw: handle Swift auth errors in a way compatible with new Tempests.

We have to differentiate the error codes depending on whether user is
anonymous (401 Unauthorized) or he doesn't have necessary permissions
(403 Forbidden). The reason behind that is the change in Tempest. See
commit ID: 6b1cd29b763dbc556137c89c5fed54c624da7f69.

Fixes: http://tracker.ceph.com/issues/16590
Signed-off-by: Radoslaw Zarzynski <rzarzynski@mirantis.com>